[package]
name = "app3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4"
rand = "0.7"

[dev-dependencies]
ntest = "0.7"

[[bin]]
name = "app3"
path = "src/main.rs"

[lib]
name = "solution"
path = "src/solution.rs"